<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_favroute"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_fav" />

        <item
            android:id="@+id/nav_addstation"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_addstation" />
    </group>
</menu>