<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.evcharginapp.ui.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/nav_map"
        android:name="com.evcharginapp.ui.MapsFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_favroute"
        android:name="com.evcharginapp.ui.FavrouteFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_favroute" />

    <fragment
        android:id="@+id/nav_addstation"
        android:name="com.evcharginapp.ui.AddEVStationFragment"
        android:label="@string/menu_addstation"
        tools:layout="@layout/fragment_addstation" />

</navigation>