<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#2a2a2a"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="left"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="@dimen/d_10dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@mipmap/ic_logo_circle" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginLeft="@dimen/d_10dp"
        android:text="@string/nav_header_title"
        android:gravity="left"
        android:layout_gravity="left"
        android:fontFamily="@font/poppins_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:layout_marginLeft="@dimen/d_10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/nav_header_subtitle" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/d_20dp"
        android:background="#0f0f0f"/>
</LinearLayout>