<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:aapt="http://schemas.android.com/aapt"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_btn"
        >
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_size_22"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="@dimen/d_15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:fontFamily="@font/worksans_bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_layout"
            android:fontFamily="@font/worksans_regular"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/text_alert_dialog_na"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <LinearLayout
            android:gravity="center"
            android:id="@+id/ll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d_2dp"
            android:layout_marginTop="@dimen/d_20dp"
            android:layout_marginRight="@dimen/d_2dp"
            android:layout_marginBottom="@dimen/d_2dp"
            android:layout_below="@+id/tv_dialog_message">
            <TextView android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/tv_no"
                android:background="@drawable/gray_rounded_btn"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_10dp"
                android:text="No"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:fontFamily="@font/worksans_regular"/>
            <TextView android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/tv_yes"
                android:background="@drawable/green_rounded_btn"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_10dp"
                android:text="@string/text_ok"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:fontFamily="@font/worksans_regular"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
