<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f2f6"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/register"
        android:layout_marginTop="22dp"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_registertext"
        >
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:padding="@dimen/d_10dp"
                        android:text="@string/please_provide_few_details"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/light_grey_heading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/worksans_regular"
                        android:hint="Name"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/worksans_regular"
                        android:hint="Email"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/worksans_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="left"
                        android:padding="10dp"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/worksans_regular"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/ll_termcondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/cb_termcondition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/accept"
                            android:textColor="@color/black"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_and_con"
                            android:layout_marginLeft="4dp"
                            android:fontFamily="@font/poppins_medium"
                            android:textColor="@color/new_green"
                            android:textSize="14sp"

                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/d_button_height"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/green_rounded_btn"
                            android:fontFamily="@font/worksans_regular"
                            android:text="Login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_register"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/d_button_height"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:background="@drawable/gray_rounded_btn"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/register"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d_10dp" />
                </LinearLayout>
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/pb_progress"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:indicatorSize="70dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="gone"
                    app:indicatorColor="@color/colorPrimary"
                    app:trackColor="@color/new_background_graylight" />
            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>
    </ScrollView>


</RelativeLayout>