<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f2f6"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/d_30sp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimary"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/login"/>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="10dp"
        android:layout_below="@+id/logintext"
        android:padding="20dp"
        app:cardBackgroundColor="@color/white"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/please_signin"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/light_grey_heading" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="left"
                    android:padding="10dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_background"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16sp" />



                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d_button_height"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/green_rounded_btn"
                        android:text="Login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_register"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/d_button_height"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/gray_rounded_btn"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pb_progress"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:indicatorSize="70dp"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/colorPrimary"
                app:trackColor="@color/new_background_graylight" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>




</RelativeLayout>